' Generated by UML Generator
' Encoded: pLLDRzim3BtxL-ZeDadHKmz6LhHO1Yp0qXL8iHKeYa6HcPIeBHcI70ph-jydsfRaZ-umO8TU3FcHVEIZQFhAMAvjNHQ9UKPPSSrB9WfkpBMr6dUrXRLGSek_W9qdJvW34wX50KdIUB7l7Aq6TtX965jKN0h-39zLRM03iiuOFScIemGzX0JVZvmMxZ7pZEdRP7Csefgp8T49aLGQfQMtz2HZHuLvKrq0qOBcLkcChRlJad3tKbxwW5SlSUNpjHfVNCSiYbUskRx_iRxxjDbcpF6o3-o2pB8kTw2_xedBUCivMSekWsdhf6CG7NAaJVaypycSIbv2nhRk9kJ12GSZD5OMbOpW4GxWhX2vmtPA5S3bd3cbmWNcgjuL43im4ngukz5EC_LcgZyA_zZrjTNTBvzNIvy_ndajFknzI74N07hF1R0WvH_RuA6s3NqTpM1FbH3yXfPk1AEQq36VuJyrYIYTquqZ8ssXA09NaNDeG_CjC9Cb5arXjvI0uAxoq9pRqKSwcPKlQEnoEYJZkFSqzmJTWR4hZKTe9oPyz2L7cN9zCBwIXyU_BmoVf6qAJh_zIXbiPVNsn70XXA97uIul-JrnSmC_xUZ6P0VrSiqqbEe8QQ_QiBjF5ujs1yTLTtRs-tACURU6CIo7w1aWrNUSJ4WCc9W6WTCs3Wgu0fcx_zOV
' URL: http://www.plantuml.com/plantuml/uml/pLLDRzim3BtxL-ZeDadHKmz6LhHO1Yp0qXL8iHKeYa6HcPIeBHcI70ph-jydsfRaZ-umO8TU3FcHVEIZQFhAMAvjNHQ9UKPPSSrB9WfkpBMr6dUrXRLGSek_W9qdJvW34wX50KdIUB7l7Aq6TtX965jKN0h-39zLRM03iiuOFScIemGzX0JVZvmMxZ7pZEdRP7Csefgp8T49aLGQfQMtz2HZHuLvKrq0qOBcLkcChRlJad3tKbxwW5SlSUNpjHfVNCSiYbUskRx_iRxxjDbcpF6o3-o2pB8kTw2_xedBUCivMSekWsdhf6CG7NAaJVaypycSIbv2nhRk9kJ12GSZD5OMbOpW4GxWhX2vmtPA5S3bd3cbmWNcgjuL43im4ngukz5EC_LcgZyA_zZrjTNTBvzNIvy_ndajFknzI74N07hF1R0WvH_RuA6s3NqTpM1FbH3yXfPk1AEQq36VuJyrYIYTquqZ8ssXA09NaNDeG_CjC9Cb5arXjvI0uAxoq9pRqKSwcPKlQEnoEYJZkFSqzmJTWR4hZKTe9oPyz2L7cN9zCBwIXyU_BmoVf6qAJh_zIXbiPVNsn70XXA97uIul-JrnSmC_xUZ6P0VrSiqqbEe8QQ_QiBjF5ujs1yTLTtRs-tACURU6CIo7w1aWrNUSJ4WCc9W6WTCs3Wgu0fcx_zOV
' Generated on: 2025-12-17T00:08:59.173584

@startuml
skinparam classAttributeIconSize 0
hide circle

class Waitress {
  -pancakeHouseMenu: Menu
  -dinerMenu: Menu
  -cafeMenu: Menu
  --
  +Waitress(pancakeHouseMenu: Menu, dinerMenu: Menu, cafeMenu: Menu)
  +printMenu(): void
  -printMenu(iterator: Iterator<MenuItem>): void
}

class DinerMenu {
  -{static} MAX_ITEMS: int = 6
  -numberOfItems: int = 0
  -menuItems: MenuItem
  --
  +DinerMenu()
  +addItem(name: String, description: String, vegetarian: boolean, price: double): void
  +createIterator(): Iterator<MenuItem>
}

class CafeMenu {
  -menuItems: Map<String, MenuItem>
  --
  +CafeMenu()
  +addItem(name: String, description: String, vegetarian: boolean, price: double): void
  +createIterator(): Iterator<MenuItem>
}

interface Menu {
  +createIterator(): Iterator<MenuItem>
}

class MenuItem {
  -name: String
  -description: String
  -vegetarian: boolean
  -price: double
  --
  +MenuItem(name: String, description: String, vegetarian: boolean, price: double)
  +getName(): String
  +getDescription(): String
  +isVegetarian(): boolean
  +getPrice(): double
}

class PancakeHouseMenu {
  -menuItems: List<MenuItem>
  --
  +PancakeHouseMenu()
  +addItem(name: String, description: String, vegetarian: boolean, price: double): void
  +createIterator(): Iterator<MenuItem>
}

class MenuTestDrive {
  +{static} main(args: String[]): void
}

class DinerMenuIterator {
  -items: MenuItem
  -position: int = 0
  --
  +DinerMenuIterator(items: MenuItem[])
  +hasNext(): boolean
  +next(): MenuItem
  +remove(): void
}

Waitress *-- Menu
DinerMenu ..|> Menu
DinerMenu *-- MenuItem
CafeMenu ..|> Menu
CafeMenu o-- MenuItem
PancakeHouseMenu ..|> Menu
PancakeHouseMenu o-- MenuItem
DinerMenuIterator *-- MenuItem
@enduml